pr573/Step3/generated/MicroParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 src/Micro.g 2011-02-19 18:16:15

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class MicroParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENTIFIER", "STRINGLITERAL", "INTLITERAL", "FLOATLITERAL", "K_PROGRAM", "K_BEGIN", "K_END", "K_PROTO", "K_FUNCTION", "K_READ", "K_WRITE", "K_IF", "K_THEN", "K_ELSE", "K_ENDIF", "K_RETURN", "K_FOR", "K_ENDFOR", "K_FLOAT", "K_INT", "K_VOID", "K_STRING", "COMMENT", "WS", "':='", "';'", "','", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'='"
    };
    public static final int EOF=-1;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int IDENTIFIER=4;
    public static final int STRINGLITERAL=5;
    public static final int INTLITERAL=6;
    public static final int FLOATLITERAL=7;
    public static final int K_PROGRAM=8;
    public static final int K_BEGIN=9;
    public static final int K_END=10;
    public static final int K_PROTO=11;
    public static final int K_FUNCTION=12;
    public static final int K_READ=13;
    public static final int K_WRITE=14;
    public static final int K_IF=15;
    public static final int K_THEN=16;
    public static final int K_ELSE=17;
    public static final int K_ENDIF=18;
    public static final int K_RETURN=19;
    public static final int K_FOR=20;
    public static final int K_ENDFOR=21;
    public static final int K_FLOAT=22;
    public static final int K_INT=23;
    public static final int K_VOID=24;
    public static final int K_STRING=25;
    public static final int COMMENT=26;
    public static final int WS=27;

    // delegates
    // delegators


        public MicroParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public MicroParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return MicroParser.tokenNames; }
    public String getGrammarFileName() { return "src/Micro.g"; }


    	SymbolTable globalTab;
    	SymbolTable currentTab;



    // $ANTLR start "program"
    // src/Micro.g:18:1: program[SymbolTable globalSymTab] : 'PROGRAM' id 'BEGIN' pgm_body 'END' ;
    public final void program(SymbolTable globalSymTab) throws RecognitionException {
        try {
            // src/Micro.g:19:3: ( 'PROGRAM' id 'BEGIN' pgm_body 'END' )
            // src/Micro.g:19:5: 'PROGRAM' id 'BEGIN' pgm_body 'END'
            {

            			globalTab = globalSymTab;
            			currentTab = globalTab;
            			currentTab.scopeId = "global";
            			System.out.println("Printing Global Symbol Table");
            			
            match(input,K_PROGRAM,FOLLOW_K_PROGRAM_in_program60); 
            pushFollow(FOLLOW_id_in_program62);
            id();

            state._fsp--;

            match(input,K_BEGIN,FOLLOW_K_BEGIN_in_program67); 
            pushFollow(FOLLOW_pgm_body_in_program69);
            pgm_body();

            state._fsp--;

            match(input,K_END,FOLLOW_K_END_in_program71); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "program"

    public static class id_return extends ParserRuleReturnScope {
    };

    // $ANTLR start "id"
    // src/Micro.g:28:1: id : IDENTIFIER ;
    public final MicroParser.id_return id() throws RecognitionException {
        MicroParser.id_return retval = new MicroParser.id_return();
        retval.start = input.LT(1);

        try {
            // src/Micro.g:29:3: ( IDENTIFIER )
            // src/Micro.g:29:5: IDENTIFIER
            {
            match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_id99); 

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "id"


    // $ANTLR start "pgm_body"
    // src/Micro.g:31:1: pgm_body : decl func_declarations ;
    public final void pgm_body() throws RecognitionException {
        try {
            // src/Micro.g:32:3: ( decl func_declarations )
            // src/Micro.g:32:5: decl func_declarations
            {
            pushFollow(FOLLOW_decl_in_pgm_body122);
            decl();

            state._fsp--;

            pushFollow(FOLLOW_func_declarations_in_pgm_body124);
            func_declarations();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "pgm_body"


    // $ANTLR start "decl"
    // src/Micro.g:34:1: decl : ( decl_list )* ;
    public final void decl() throws RecognitionException {
        try {
            // src/Micro.g:35:3: ( ( decl_list )* )
            // src/Micro.g:35:5: ( decl_list )*
            {
            // src/Micro.g:35:5: ( decl_list )*
            loop1:
            do {
                int alt1=2;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // src/Micro.g:35:5: decl_list
            	    {
            	    pushFollow(FOLLOW_decl_list_in_decl137);
            	    decl_list();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "decl"


    // $ANTLR start "decl_list"
    // src/Micro.g:37:1: decl_list : ( string_decl_list | var_decl_list );
    public final void decl_list() throws RecognitionException {
        try {
            // src/Micro.g:38:3: ( string_decl_list | var_decl_list )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==K_STRING) ) {
                alt2=1;
            }
            else if ( ((LA2_0>=K_FLOAT && LA2_0<=K_INT)) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // src/Micro.g:38:5: string_decl_list
                    {
                    pushFollow(FOLLOW_string_decl_list_in_decl_list154);
                    string_decl_list();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src/Micro.g:38:24: var_decl_list
                    {
                    pushFollow(FOLLOW_var_decl_list_in_decl_list158);
                    var_decl_list();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "decl_list"


    // $ANTLR start "string_decl_list"
    // src/Micro.g:42:1: string_decl_list : ( string_decl )+ ;
    public final void string_decl_list() throws RecognitionException {
        try {
            // src/Micro.g:43:3: ( ( string_decl )+ )
            // src/Micro.g:43:5: ( string_decl )+
            {
            // src/Micro.g:43:5: ( string_decl )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                alt3 = dfa3.predict(input);
                switch (alt3) {
            	case 1 :
            	    // src/Micro.g:43:5: string_decl
            	    {
            	    pushFollow(FOLLOW_string_decl_in_string_decl_list175);
            	    string_decl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "string_decl_list"


    // $ANTLR start "string_decl"
    // src/Micro.g:45:1: string_decl : 'STRING' id ':=' str ';' ;
    public final void string_decl() throws RecognitionException {
        MicroParser.id_return id1 = null;

        MicroParser.str_return str2 = null;


        try {
            // src/Micro.g:46:3: ( 'STRING' id ':=' str ';' )
            // src/Micro.g:46:5: 'STRING' id ':=' str ';'
            {
            match(input,K_STRING,FOLLOW_K_STRING_in_string_decl195); 
            pushFollow(FOLLOW_id_in_string_decl197);
            id1=id();

            state._fsp--;

            match(input,28,FOLLOW_28_in_string_decl199); 
            pushFollow(FOLLOW_str_in_string_decl201);
            str2=str();

            state._fsp--;

            match(input,29,FOLLOW_29_in_string_decl203); 

            			Symbol s = new Symbol((id1!=null?input.toString(id1.start,id1.stop):null), "STRING", (str2!=null?input.toString(str2.start,str2.stop):null));
            			currentTab.define(s);
            			s.printStr();
            			

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "string_decl"

    public static class str_return extends ParserRuleReturnScope {
    };

    // $ANTLR start "str"
    // src/Micro.g:53:1: str : STRINGLITERAL ;
    public final MicroParser.str_return str() throws RecognitionException {
        MicroParser.str_return retval = new MicroParser.str_return();
        retval.start = input.LT(1);

        try {
            // src/Micro.g:54:3: ( STRINGLITERAL )
            // src/Micro.g:54:5: STRINGLITERAL
            {
            match(input,STRINGLITERAL,FOLLOW_STRINGLITERAL_in_str235); 

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "str"


    // $ANTLR start "var_decl_list"
    // src/Micro.g:58:1: var_decl_list : ( var_decl )+ ;
    public final void var_decl_list() throws RecognitionException {
        try {
            // src/Micro.g:59:3: ( ( var_decl )+ )
            // src/Micro.g:59:5: ( var_decl )+
            {
            // src/Micro.g:59:5: ( var_decl )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                alt4 = dfa4.predict(input);
                switch (alt4) {
            	case 1 :
            	    // src/Micro.g:59:5: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_var_decl_list256);
            	    var_decl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "var_decl_list"


    // $ANTLR start "var_decl"
    // src/Micro.g:61:1: var_decl : var_type var_id_list ';' ;
    public final void var_decl() throws RecognitionException {
        try {
            // src/Micro.g:62:3: ( var_type var_id_list ';' )
            // src/Micro.g:62:5: var_type var_id_list ';'
            {
            pushFollow(FOLLOW_var_type_in_var_decl279);
            var_type();

            state._fsp--;

            pushFollow(FOLLOW_var_id_list_in_var_decl281);
            var_id_list();

            state._fsp--;

            match(input,29,FOLLOW_29_in_var_decl283); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "var_decl"


    // $ANTLR start "var_type"
    // src/Micro.g:64:1: var_type : ( 'FLOAT' | 'INT' );
    public final void var_type() throws RecognitionException {
        try {
            // src/Micro.g:65:3: ( 'FLOAT' | 'INT' )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==K_FLOAT) ) {
                alt5=1;
            }
            else if ( (LA5_0==K_INT) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // src/Micro.g:65:5: 'FLOAT'
                    {
                    match(input,K_FLOAT,FOLLOW_K_FLOAT_in_var_type301); 
                    currentTab.currentVarType = "FLOAT";

                    }
                    break;
                case 2 :
                    // src/Micro.g:66:5: 'INT'
                    {
                    match(input,K_INT,FOLLOW_K_INT_in_var_type310); 
                    currentTab.currentVarType = "INT";

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "var_type"


    // $ANTLR start "any_type"
    // src/Micro.g:68:1: any_type : ( var_type | 'VOID' );
    public final void any_type() throws RecognitionException {
        try {
            // src/Micro.g:69:3: ( var_type | 'VOID' )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=K_FLOAT && LA6_0<=K_INT)) ) {
                alt6=1;
            }
            else if ( (LA6_0==K_VOID) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // src/Micro.g:69:5: var_type
                    {
                    pushFollow(FOLLOW_var_type_in_any_type337);
                    var_type();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src/Micro.g:70:5: 'VOID'
                    {
                    match(input,K_VOID,FOLLOW_K_VOID_in_any_type343); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "any_type"


    // $ANTLR start "var_id_list"
    // src/Micro.g:72:1: var_id_list : var_id ( ',' var_id )* ;
    public final void var_id_list() throws RecognitionException {
        try {
            // src/Micro.g:73:3: ( var_id ( ',' var_id )* )
            // src/Micro.g:73:5: var_id ( ',' var_id )*
            {
            pushFollow(FOLLOW_var_id_in_var_id_list356);
            var_id();

            state._fsp--;

            // src/Micro.g:73:12: ( ',' var_id )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==30) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // src/Micro.g:73:14: ',' var_id
            	    {
            	    match(input,30,FOLLOW_30_in_var_id_list360); 
            	    pushFollow(FOLLOW_var_id_in_var_id_list362);
            	    var_id();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "var_id_list"


    // $ANTLR start "var_id"
    // src/Micro.g:75:1: var_id : id ;
    public final void var_id() throws RecognitionException {
        MicroParser.id_return id3 = null;


        try {
            // src/Micro.g:76:4: ( id )
            // src/Micro.g:76:6: id
            {
            pushFollow(FOLLOW_id_in_var_id378);
            id3=id();

            state._fsp--;


            			Symbol s = new Symbol((id3!=null?input.toString(id3.start,id3.stop):null),currentTab.currentVarType);
            			currentTab.define(s);
            			s.print();
            			

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "var_id"


    // $ANTLR start "id_list"
    // src/Micro.g:83:1: id_list : id ( ',' id )* ;
    public final void id_list() throws RecognitionException {
        try {
            // src/Micro.g:84:3: ( id ( ',' id )* )
            // src/Micro.g:84:5: id ( ',' id )*
            {
            pushFollow(FOLLOW_id_in_id_list408);
            id();

            state._fsp--;

            // src/Micro.g:84:8: ( ',' id )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==30) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // src/Micro.g:84:10: ',' id
            	    {
            	    match(input,30,FOLLOW_30_in_id_list412); 
            	    pushFollow(FOLLOW_id_in_id_list414);
            	    id();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "id_list"


    // $ANTLR start "param_decl_list"
    // src/Micro.g:88:1: param_decl_list : param_decl param_decl_tail ;
    public final void param_decl_list() throws RecognitionException {
        try {
            // src/Micro.g:89:3: ( param_decl param_decl_tail )
            // src/Micro.g:89:5: param_decl param_decl_tail
            {
            pushFollow(FOLLOW_param_decl_in_param_decl_list437);
            param_decl();

            state._fsp--;

            pushFollow(FOLLOW_param_decl_tail_in_param_decl_list439);
            param_decl_tail();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "param_decl_list"


    // $ANTLR start "param_decl"
    // src/Micro.g:91:1: param_decl : var_type id ;
    public final void param_decl() throws RecognitionException {
        try {
            // src/Micro.g:92:3: ( var_type id )
            // src/Micro.g:92:5: var_type id
            {
            pushFollow(FOLLOW_var_type_in_param_decl460);
            var_type();

            state._fsp--;

            pushFollow(FOLLOW_id_in_param_decl462);
            id();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "param_decl"


    // $ANTLR start "param_decl_tail"
    // src/Micro.g:94:1: param_decl_tail : ( ',' param_decl )* ;
    public final void param_decl_tail() throws RecognitionException {
        try {
            // src/Micro.g:95:3: ( ( ',' param_decl )* )
            // src/Micro.g:95:5: ( ',' param_decl )*
            {
            // src/Micro.g:95:5: ( ',' param_decl )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==30) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // src/Micro.g:95:7: ',' param_decl
            	    {
            	    match(input,30,FOLLOW_30_in_param_decl_tail480); 
            	    pushFollow(FOLLOW_param_decl_in_param_decl_tail482);
            	    param_decl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "param_decl_tail"


    // $ANTLR start "func_declarations"
    // src/Micro.g:99:1: func_declarations : ( func_decl )* ;
    public final void func_declarations() throws RecognitionException {
        try {
            // src/Micro.g:100:3: ( ( func_decl )* )
            // src/Micro.g:100:5: ( func_decl )*
            {
            // src/Micro.g:100:5: ( func_decl )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==K_FUNCTION) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // src/Micro.g:100:5: func_decl
            	    {
            	    pushFollow(FOLLOW_func_decl_in_func_declarations502);
            	    func_decl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "func_declarations"


    // $ANTLR start "func_decl"
    // src/Micro.g:102:1: func_decl : 'FUNCTION' any_type id '(' ( param_decl_list )? ')' 'BEGIN' func_body 'END' ;
    public final void func_decl() throws RecognitionException {
        MicroParser.id_return id4 = null;


        try {
            // src/Micro.g:103:3: ( 'FUNCTION' any_type id '(' ( param_decl_list )? ')' 'BEGIN' func_body 'END' )
            // src/Micro.g:103:5: 'FUNCTION' any_type id '(' ( param_decl_list )? ')' 'BEGIN' func_body 'END'
            {
            match(input,K_FUNCTION,FOLLOW_K_FUNCTION_in_func_decl524); 
            pushFollow(FOLLOW_any_type_in_func_decl526);
            any_type();

            state._fsp--;

            pushFollow(FOLLOW_id_in_func_decl528);
            id4=id();

            state._fsp--;


            			SymbolTable func = new SymbolTable((id4!=null?input.toString(id4.start,id4.stop):null));
            			currentTab = func;
            			System.out.println("\nPrinting Symbol Table for "+func.scopeId);
            			
            match(input,31,FOLLOW_31_in_func_decl540); 
            // src/Micro.g:109:8: ( param_decl_list )?
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( ((LA11_0>=K_FLOAT && LA11_0<=K_INT)) ) {
                alt11=1;
            }
            switch (alt11) {
                case 1 :
                    // src/Micro.g:109:8: param_decl_list
                    {
                    pushFollow(FOLLOW_param_decl_list_in_func_decl542);
                    param_decl_list();

                    state._fsp--;


                    }
                    break;

            }

            match(input,32,FOLLOW_32_in_func_decl545); 
            match(input,K_BEGIN,FOLLOW_K_BEGIN_in_func_decl547); 
            pushFollow(FOLLOW_func_body_in_func_decl549);
            func_body();

            state._fsp--;

            match(input,K_END,FOLLOW_K_END_in_func_decl551); 
            currentTab = globalTab;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "func_decl"


    // $ANTLR start "func_body"
    // src/Micro.g:112:1: func_body : decl stmt_list ;
    public final void func_body() throws RecognitionException {
        try {
            // src/Micro.g:113:3: ( decl stmt_list )
            // src/Micro.g:113:5: decl stmt_list
            {
            pushFollow(FOLLOW_decl_in_func_body578);
            decl();

            state._fsp--;

            pushFollow(FOLLOW_stmt_list_in_func_body580);
            stmt_list();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "func_body"


    // $ANTLR start "stmt_list"
    // src/Micro.g:117:1: stmt_list : ( stmt )* ;
    public final void stmt_list() throws RecognitionException {
        try {
            // src/Micro.g:118:3: ( ( stmt )* )
            // src/Micro.g:118:5: ( stmt )*
            {
            // src/Micro.g:118:5: ( stmt )*
            loop12:
            do {
                int alt12=2;
                alt12 = dfa12.predict(input);
                switch (alt12) {
            	case 1 :
            	    // src/Micro.g:118:5: stmt
            	    {
            	    pushFollow(FOLLOW_stmt_in_stmt_list605);
            	    stmt();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "stmt_list"


    // $ANTLR start "stmt"
    // src/Micro.g:120:1: stmt : ( assign_stmt | read_stmt | write_stmt | return_stmt | if_stmt | for_stmt );
    public final void stmt() throws RecognitionException {
        try {
            // src/Micro.g:121:3: ( assign_stmt | read_stmt | write_stmt | return_stmt | if_stmt | for_stmt )
            int alt13=6;
            switch ( input.LA(1) ) {
            case IDENTIFIER:
                {
                alt13=1;
                }
                break;
            case K_READ:
                {
                alt13=2;
                }
                break;
            case K_WRITE:
                {
                alt13=3;
                }
                break;
            case K_RETURN:
                {
                alt13=4;
                }
                break;
            case K_IF:
                {
                alt13=5;
                }
                break;
            case K_FOR:
                {
                alt13=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 13, 0, input);

                throw nvae;
            }

            switch (alt13) {
                case 1 :
                    // src/Micro.g:121:5: assign_stmt
                    {
                    pushFollow(FOLLOW_assign_stmt_in_stmt632);
                    assign_stmt();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src/Micro.g:121:19: read_stmt
                    {
                    pushFollow(FOLLOW_read_stmt_in_stmt636);
                    read_stmt();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // src/Micro.g:121:31: write_stmt
                    {
                    pushFollow(FOLLOW_write_stmt_in_stmt640);
                    write_stmt();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // src/Micro.g:121:44: return_stmt
                    {
                    pushFollow(FOLLOW_return_stmt_in_stmt644);
                    return_stmt();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // src/Micro.g:121:58: if_stmt
                    {
                    pushFollow(FOLLOW_if_stmt_in_stmt648);
                    if_stmt();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // src/Micro.g:121:68: for_stmt
                    {
                    pushFollow(FOLLOW_for_stmt_in_stmt652);
                    for_stmt();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "stmt"


    // $ANTLR start "assign_stmt"
    // src/Micro.g:125:1: assign_stmt : assign_expr ';' ;
    public final void assign_stmt() throws RecognitionException {
        try {
            // src/Micro.g:126:3: ( assign_expr ';' )
            // src/Micro.g:126:5: assign_expr ';'
            {
            pushFollow(FOLLOW_assign_expr_in_assign_stmt675);
            assign_expr();

            state._fsp--;

            match(input,29,FOLLOW_29_in_assign_stmt677); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "assign_stmt"


    // $ANTLR start "assign_expr"
    // src/Micro.g:128:1: assign_expr : id ':=' expr ;
    public final void assign_expr() throws RecognitionException {
        try {
            // src/Micro.g:129:3: ( id ':=' expr )
            // src/Micro.g:129:5: id ':=' expr
            {
            pushFollow(FOLLOW_id_in_assign_expr696);
            id();

            state._fsp--;

            match(input,28,FOLLOW_28_in_assign_expr698); 
            pushFollow(FOLLOW_expr_in_assign_expr700);
            expr();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "assign_expr"


    // $ANTLR start "read_stmt"
    // src/Micro.g:131:1: read_stmt : 'READ' '(' id_list ')' ';' ;
    public final void read_stmt() throws RecognitionException {
        try {
            // src/Micro.g:132:3: ( 'READ' '(' id_list ')' ';' )
            // src/Micro.g:132:5: 'READ' '(' id_list ')' ';'
            {
            match(input,K_READ,FOLLOW_K_READ_in_read_stmt721); 
            match(input,31,FOLLOW_31_in_read_stmt723); 
            pushFollow(FOLLOW_id_list_in_read_stmt725);
            id_list();

            state._fsp--;

            match(input,32,FOLLOW_32_in_read_stmt727); 
            match(input,29,FOLLOW_29_in_read_stmt729); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "read_stmt"


    // $ANTLR start "write_stmt"
    // src/Micro.g:134:1: write_stmt : 'WRITE' '(' id_list ')' ';' ;
    public final void write_stmt() throws RecognitionException {
        try {
            // src/Micro.g:135:3: ( 'WRITE' '(' id_list ')' ';' )
            // src/Micro.g:135:5: 'WRITE' '(' id_list ')' ';'
            {
            match(input,K_WRITE,FOLLOW_K_WRITE_in_write_stmt749); 
            match(input,31,FOLLOW_31_in_write_stmt751); 
            pushFollow(FOLLOW_id_list_in_write_stmt753);
            id_list();

            state._fsp--;
